--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-_ReSharper.Vanderkorn/
-Vanderkorn/bin/
-Vanderkorn/obj/
-TestVanderkorn/bin/
-TestVanderkorn/obj/
-TestProject1/bin/
-TestProject1/obj/
+/_ReSharper.Vanderkorn
+/Vanderkorn/bin
+/Vanderkorn/obj
+/TestVanderkorn/bin
+/TestVanderkorn/obj
+/TestProject1/bin
+/TestProject1/obj
